fix: color contrast on container

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
   --color-primary-hover: #0d6578;
   --color-on-primary: #ffffff;
   --color-primary-container: #00464a;
-  --color-on-primary-container: #7cb3b7;
+  --color-on-primary-container: #D2ECEC;
   --color-on-primary-fixed: #002022;
   --color-on-primary-fixed-variant: #104e52;
   --color-primary-fixed: #c5e9ef;
